--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,12 +3,13 @@
 @import 'navbar.css';
 @import 'card.css';
 @import 'auth.css';
+@import 'index.css';
 
 :root{
-    --textone:rgb(225, 90, 214);
-    --main:rgb(167, 1, 114);
-    --sec:rgb(230, 92, 219);
-    --ter:rgb(239, 190, 235);
+    --textone:rgb(90, 121, 225);
+    --main:rgb(12, 1, 167);
+    --sec:rgb(255, 255, 255);
+    --ter:rgb(160, 204, 233);
 }
 
 
@@ -18,7 +19,11 @@
 
 .h1-custom{
 
-    color: var(--ter);
+    color: var(--sec);
+}
+
+.text-primary{
+  color: var(--sec)!important;
 }
 
 .guest{
@@ -37,20 +42,50 @@
 
 .p{
     font-family: 'Crete Round', serif;
-    color: white;
 }
 
-/* .p:hover{
-    border-bottom: 1px solid white;
+.p:hover{
+    transform: scale(1.1);
     transition: 0.5s;
-} */
+}
 
 
 .bg-site{
-    border: 2px solid var(--ter);
-    border-radius: 50px solid var(--textone);
-    background-color: rgb(239, 190, 235);
-}
+    /* Basic dimensions and centering */
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+    /* Dark mode colors and gradient */
+    background: #121212; /* Fallback for browsers that don't support gradients */
+    background: linear-gradient(
+      135deg,
+      #121212 25%,
+      #1a1a1a 25%,
+      #1a1a1a 50%,
+      #121212 50%,
+      #121212 75%,
+      #1a1a1a 75%,
+      #1a1a1a
+    );
+    background-size: 40px 40px;
+  
+    /* Animation */
+    animation: move 4s linear infinite;
+  }
+  
+  @keyframes move {
+    0% {
+      background-position: 0 0;
+    }
+    100% {
+      background-position: 40px 40px;
+    }
+  }
+  
+
   
   .button {
     position: relative;
@@ -122,6 +157,6 @@
   }
 
   .dropdown-menu{
-    background-color: rgb(239, 190, 235);
+    background-color:rgb(160, 204, 233);
   }
   
