--- a/resources/css/auth.css
+++ b/resources/css/auth.css
@@ -6,7 +6,7 @@
     padding: 10px;
     margin: 20px auto;
     transform: translate(-50%, -55%);
-    background: linear-gradient(45deg,rgb(225, 90, 214),rgb(239, 190, 235));
+    background: linear-gradient(45deg,rgb(12, 1, 167),rgb(160, 204, 233));
     box-sizing: border-box;
     box-shadow: 0 15px 25px var(--main);
     border-radius: 10px;
@@ -184,3 +184,24 @@
     background: none;
     color: #3f3e3e;
   }
+
+
+  .form-control{
+    background:linear-gradient(45deg,rgb(12, 1, 167),rgb(160, 204, 233));
+  }
+
+  .file{
+    border: 2px solid;
+    border-radius: 7px;
+  }
+
+
+
+
+
+
+
+  
+  
+  
+  
