--- a/resources/css/homepage.css
+++ b/resources/css/homepage.css
@@ -15,8 +15,9 @@
 }
 
 .header{
-  background-image: linear-gradient(rgb(165, 165, 165),transparent),url(/public/img/carousel2.jpg);
+  background-image: linear-gradient(rgb(165, 165, 165),transparent),url(/public/img/header.jpg);
   background-position: center;
   background-size: cover;
   height: 550px;
 }
+
