--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,5 @@
 @import 'bootstrap';
 @import 'homepage.css';
-@import 'navbar.css';
 @import 'card.css';
 @import 'auth.css';
 @import 'index.css';
@@ -10,6 +9,7 @@
     --main:rgb(12, 1, 167);
     --sec:rgb(255, 255, 255);
     --ter:rgb(160, 204, 233);
+    --four:rgb(193, 180, 96);
 }
 
 
@@ -40,6 +40,10 @@
     color:var(--main);
 }
 
+.body{
+  font-family: 'Crete Round', serif;
+}
+
 .p{
     font-family: 'Crete Round', serif;
 }
@@ -50,41 +54,6 @@
 }
 
 
-.bg-site{
-    /* Basic dimensions and centering */
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
-    /* Dark mode colors and gradient */
-    background: #121212; /* Fallback for browsers that don't support gradients */
-    background: linear-gradient(
-      135deg,
-      #121212 25%,
-      #1a1a1a 25%,
-      #1a1a1a 50%,
-      #121212 50%,
-      #121212 75%,
-      #1a1a1a 75%,
-      #1a1a1a
-    );
-    background-size: 40px 40px;
-  
-    /* Animation */
-    animation: move 4s linear infinite;
-  }
-  
-  @keyframes move {
-    0% {
-      background-position: 0 0;
-    }
-    100% {
-      background-position: 40px 40px;
-    }
-  }
-  
 
   
   .button {
@@ -93,7 +62,7 @@
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
     padding-block: 0.5rem;
     padding-inline: 1.25rem;
-    background-color:var(--textone);
+    background-color:var(--four);
     border-radius: 9999px;
     display: flex;
     align-items: center;
@@ -159,4 +128,6 @@
   .dropdown-menu{
     background-color:rgb(160, 204, 233);
   }
+  
+
   
