--- a/resources/css/homepage.css
+++ b/resources/css/homepage.css
@@ -15,7 +15,7 @@
 }
 
 .header{
-  background-image: linear-gradient(rgb(165, 165, 165),transparent),url(/public/img/header.jpg);
+  background-image: linear-gradient(rgb(50, 54, 159),transparent,rgb(158, 159, 235)),url(/public/img/header.jpg);
   background-position: center;
   background-size: cover;
   height: 550px;
