--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,24 +3,23 @@
 @import 'card.css';
 @import 'auth.css';
 @import 'index.css';
+@import 'navbar.css';
+@import 'sfondo.css';
 
 :root{
     --textone:rgb(90, 121, 225);
-    --main:rgb(12, 1, 167);
+    --main:rgb(167, 164, 1);
     --sec:rgb(255, 255, 255);
     --ter:rgb(160, 204, 233);
     --four:rgb(193, 180, 96);
 }
 
-
-.sfondo{
-  background: linear-gradient(45deg,rgb(62, 62, 62),transparent),url(/public/img/sfondo.jpg);
-  background-position: center;
-  background-size: contain;
-}
-
 .text-decoration{
     text-decoration: none;
+}
+
+.text-decoration:hover{
+  text-decoration: none;
 }
 
 .h1-custom{
@@ -28,22 +27,11 @@
     color: var(--sec);
 }
 
-.text-primary{
-  color: var(--sec)!important;
-}
-
-.guest{
-    color: black;
-}
-
-.guest:hover{
-    border-bottom: 2px solid var(--ter);
-}
-
-.brand-font,h1,h2,h3,h4,h5{
-    font-family: 'Dancing Script';
+h1,h2,h3,h4,h5{
+    font-family: 'Anton', sans-serif;
     font-weight: bolder;
-    color:var(--main);
+    letter-spacing: 2px;
+    color:var(--four);
 }
 
 .body{
@@ -52,88 +40,16 @@
 
 .p{
     font-family: 'Crete Round', serif;
+    color: var(--four);
 }
 
 .p:hover{
     transform: scale(1.1);
     transition: 0.5s;
+    color: var(--four);
 }
 
 
-
-  
-  .button {
-    position: relative;
-    transition: all 0.3s ease-in-out;
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
-    padding-block: 0.5rem;
-    padding-inline: 1.25rem;
-    background-color:var(--four);
-    border-radius: 9999px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #ffff;
-    gap: 10px;
-    font-weight: bold;
-    border: 3px solid #ffffff4d;
-    outline: none;
-    overflow: hidden;
-    font-size: 15px;
-  }
-  
-  .icon {
-    width: 24px;
-    height: 24px;
-    transition: all 0.3s ease-in-out;
-  }
-  
-  .button:hover {
-    transform: scale(1.05);
-    border-color: var(--main);
-  }
-  
-  .button:hover .icon {
-    transform: translate(4px);
-  }
-  
-  .button:hover::before {
-    animation: shine 1.5s ease-out infinite;
-  }
-  
-  .button::before {
-    content: "";
-    position: absolute;
-    width: 100px;
-    height: 100%;
-    background-image: linear-gradient(
-      120deg,
-      rgba(255, 255, 255, 0) 30%,
-      rgba(255, 255, 255, 0.8),
-      rgba(255, 255, 255, 0) 70%
-    );
-    top: 0;
-    left: -100px;
-    opacity: 0.6;
-  }
-  
-  @keyframes shine {
-    0% {
-      left: -100px;
-    }
-  
-    60% {
-      left: 100%;
-    }
-  
-    to {
-      left: 100%;
-    }
-  }
-
-  .dropdown-menu{
-    background-color:rgb(160, 204, 233);
-  }
   
 
   
