--- a/resources/css/card.css
+++ b/resources/css/card.css
@@ -1,89 +1,161 @@
 .card {
-    position: relative;
-    width: 350px;
-    height: 250px;
-    background:linear-gradient(rgb(11, 13, 75),transparent,rgb(158, 159, 235)),url(/public/img/bgcard.jpg);
-    background-position: center;
-    background-size: cover;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+  width: 300px;
+  position: relative;
+  background: rgb(255, 255, 255);
+  padding: 20px;
 }
 
-.card svg {
-    width: 48px;
-    fill: var(--main);
-    transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+.card::after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 10px;
+  bottom: 15px;
+  right: 0;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.4);
+  transform: rotate(5deg);
+  transition: all 0.1s ease-in;
 }
 
-.card:hover {
-    transform: rotate(-5deg) scale(1.1);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+.card::before {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 10px;
+  bottom: 15px;
+  left: 0;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.4);
+  transform: rotate(-5deg);
+  transition: all 0.1s ease-in;
 }
 
-.card__content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotate(-45deg);
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    box-sizing: border-box;
-    background-color:linear-gradient(rgb(11, 13, 75),transparent,rgb(158, 159, 235));
-    opacity: 0;
-    transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+.card:hover:before, .card:hover:after {
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.6);
 }
 
-.card:hover .card__content {
-    transform: translate(-50%, -50%) rotate(0deg);
-    opacity: 1;
+.card:hover:before {
+  transform: rotate(-8deg);
 }
 
-.card__title {
-    margin: 0;
-    font-size: 24px;
-    color: #333;
-    font-weight: 700;
+.card:hover:after {
+  transform: rotate(8deg);
 }
 
-.card__description {
-    margin: 10px 0 0;
-    font-size: 14px;
-    color: #777;
-    line-height: 1.4;
+.card__img {
+  position: relative;
+  /* background: #a62a00;
+  background: linear-gradient(315deg, #ff7d7d, #a62a00); */
+  width: 100%;
+  height: 175px;
 }
 
-.card:hover svg {
-    scale: 0;
-    transform: rotate(-45deg);
+.card__span {
+  cursor: pointer;
+  font-size: 11px;
+  position: absolute;
+  background-color: white;
+  top: 10px;
+  left: 10px;
+  padding: 3px 7px;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.1s ease-in;
+  user-select: none;
 }
 
-
-.shadow__btn {
-    padding: 10px 10px;
-    border: none;
-    font-size: 10px;
-    color: #fff;
-    border-radius: 7px;
-    letter-spacing: 4px;
-    font-weight: 700;
-    text-transform: uppercase;
-    transition: 0.5s;
-    transition-property: box-shadow;
+.card__span:hover {
+  transform: translateX(5px);
 }
 
-.shadow__btn {
-    background: rgb(0,140,255);
-    box-shadow: 0 0 25px rgb(0,140,255);
+.card-int {
+  padding: 20px 0 0 0;
 }
 
-.shadow__btn:hover {
-    box-shadow: 0 0 5px rgb(0,140,255),
-    0 0 25px rgb(0,140,255),
-    0 0 50px rgb(0,140,255),
-    0 0 100px rgb(0,140,255);
+.card-int__title {
+  font-weight: bold;
+  font-size: 1.2rem;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: 10px;
+}
+
+.card-int__button {
+  cursor: pointer;
+  margin: 20px 0 0 0;
+  padding: 7px 20px;
+  width: 100%;
+  background-color: rgb(255, 239, 238);
+  border: none;
+  color: black;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.1s ease-in;
+  user-select: none;
+}
+
+.card-int__button:active {
+  box-shadow: 0px 0px 15px rgba(0, 119, 255, 0.5);
+}
+
+.card-int__button:hover::before {
+  animation: effect_two 0.4s 1;
+}
+
+.card-int__button::before {
+  content: 'More for this article';
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  background: #a62a00;
+  background: linear-gradient(315deg, #ff7d7d, #a62a00);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transform: translateX(-99%);
+  z-index: 1;
+  animation: effect_one 10s infinite;
+}
+
+.card-int__button:hover::before {
+  transform: translateX(0%);
+}
+
+.excerpt {
+  font-size: 14px;
+}
+
+@keyframes effect_one {
+  0% {
+    transform: translateX(-99%);
+  }
+
+  25% {
+    transform: translateX(-90%);
+  }
+
+  50% {
+    transform: translateX(-80%);
+  }
+
+  75% {
+    transform: translateX(-95%);
+  }
+
+  100% {
+    transform: translateX(-99%);
+  }
+}
+
+@keyframes effect_two {
+  to {
+    transform: translateX(-1%);
+  }
+
+  from {
+    transform: translateX(-99%);
+  }
 }
