--- a/resources/css/homepage.css
+++ b/resources/css/homepage.css
@@ -1,16 +1,14 @@
 .titolo{
   animation-name: title;
-  animation-duration: 3s;
+  animation-duration: 5s;
   animation-iteration-count: 1;
   }
 
 @keyframes title{
   0%{
-      transform: rotateY(0deg);
-  }50%{
-    transform: rotateY(-30deg) skew(-20deg);
+    opacity: 0;
   }100%{
-    transform: rotateY(0) skew(0);
+    opacity: 1;
   }
 }
 
@@ -18,6 +16,7 @@
   background-image:url(/public/img/header.jpg);
   background-position: center top;
   background-size: contain;
+  height: 580px;
 }
 
 
@@ -39,5 +38,12 @@
 background-size: 100%;
 transform: scale(1.08);
 transition: 0.5s;
+}
+
+
+@media screen and(max-width:670px){
+  h1,h2,h3,h4,h5{
+    font-size: 2px;
+  }
 }
 
