inserimento immagini in store

--- a/resources/css/card.css
+++ b/resources/css/card.css
@@ -45,10 +45,12 @@
 
 .card__img {
   position: relative;
+  border: 2px solid black;
+  border-radius: 5px;
   /* background: #a62a00;
   background: linear-gradient(315deg, #ff7d7d, #a62a00); */
   width: 100%;
-  height: 175px;
+  height: 100%;
 }
 
 .card__span {
