--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -45,9 +45,8 @@ h1,h2,h3,h4,h5{
     color: var(--four);
 }
 
-.p-2{
-    font-family: 'Crete Round', serif;
-    color: white;
+.pp{
+    color: var(--four);
 }
 
 .p:hover{
