--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -2,16 +2,32 @@
     height: 150px;
 }
 
-  .div-pagination{
-    height: 10vh;
-}
-
-
-.pagination{
-    margin: 0;
+/* search */
+.InputContainer {
+    width: 210px;
+    height: 50px;
     display: flex;
-    justify-content: center;
     align-items: center;
-}
+    justify-content: center;
+    background: linear-gradient(to bottom,rgb(195, 202, 67),rgb(23, 23, 23));
+    border-radius: 30px;
+    overflow: hidden;
+    cursor: pointer;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.075);
+  }
+  
+  .input {
+    width: 200px;
+    height: 40px;
+    border: none;
+    outline: none;
+    caret-color: rgb(44, 44, 44);
+    background-color: rgb(255, 255, 255);
+    border-radius: 30px;
+    padding-left: 15px;
+    letter-spacing: 0.8px;
+    color: rgb(19, 19, 19);
+    font-size: 13.4px;
+  }
   
   
