--- a/resources/css/sfondo.css
+++ b/resources/css/sfondo.css
@@ -2,6 +2,7 @@
     background: url(/public/img/sfondo.jpg);
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .sfondo-index{
