--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -47,11 +47,16 @@ h1,h2,h3,h4,h5{
 
 .pp{
     color: var(--four);
+    font-family: 'Crete Round', serif;
 }
 
 .p:hover{
     transform: scale(1.1);
     transition: 0.5s;
+    color: var(--four);
+}
+
+.pp:hover{
     color: var(--four);
 }
 
